--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
     defaultConfig {
-        applicationId "com.example.karthik.adwindow_client"
+        applicationId "com.example.adwindow.adwindow_client"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
