--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.adwindow.adwindow_client.ScreenInformation"
+        <activity android:name=".SignUpActivity"></activity>
+        <activity
+            android:name=".ScreenInformation"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.Dialog.Alert"/>
-        <activity android:name="com.example.adwindow.adwindow_client.ScreenLocationAdUpload"
-            android:screenOrientation="portrait"/>
+            android:theme="@style/Theme.AppCompat.Light.Dialog.Alert" />
+        <activity
+            android:name=".ScreenLocationAdUpload"
+            android:screenOrientation="portrait" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -39,14 +42,14 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name="com.example.adwindow.adwindow_client.AdMap"
+            android:name=".AdMap"
             android:label="@string/title_activity_ad_map"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.example.adwindow.adwindow_client.UserDashboard"
+            android:name=".UserDashboard"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.example.adwindow.adwindow_client.LoginActivity"
+            android:name=".LoginActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -54,7 +57,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.adwindow.adwindow_client.MainActivity" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
